docs/it/4.0/media-manager/settings.md
# SETTINGS
![](/img/3.1/setting_1.png)

### Lingua
Scelta della lingua tra __Italiano__ e __Inglese__ del Media Manager.

### Apertura
__Singola Istanza:__ Può essere aperto un solo Touchviewer [default].<br>
__Istanze Multiple:__ Possono essere aperte più finestre del Touchviewer.

### Stile finestra
__Senza bordi:__ Il Media Presenter si apre in modalità fullscreen [default].<br>
__Standard:__ Il Media Presenter si apre in modalità windowed.

### Dimensioni
__Tutto schermo:__ Il Media Presenter occuperà tutto lo schermo disponibile.<br>
__Personalizzate:__ Il Media Presenter si aprirà alla dimensione impostata nelle proprietà aggiuntive:<br>
- _Larghezza:_ Larghezza della finestra:<br>
- _Altezza:_ Altezza della finestra:<br>

__Posizione:__ Posizione in cui si deve aprire la finestra:<br>
- __Centro:__ La finestra si aprirà al centro dello schermo.<br>
- __Personalizzata:__ La finestra si potrà aprire nella posizione desiderata, impostando le proprietà aggiuntive:<br>
  - _Sinistra:_ Posizione rispetto il margine sinistro.<br>
  - _Alto:_ Posione rispetto il margine alto.

### Background
__Colore di sfondo:__ Tinta unita che deve avere il background dello stage.<br>
__Video o immagine di sfondo:__ Immagine di Default da usare come background.<br>
__Adattamento file:__ Determina la modalità di adattamento del background rispetto allo stage:<br>
  - _Stira:_ Il file viene adattato alla risoluzione della finestra senza mantenere le proporzioni originarie [default]<br>
  - _Nessuno:_ il file non viene adattato ed è possibile scegliere in quale posizione deve comparire<br>
  - _Adatta Internamente:_ Il file viene adattato mantenendo le sue proprozioni all'interno della finestra<br>
  - _Adatta Esternamente:_ Il file viene adattato mantenendo le sue proprozioni coprendo tutta l'area visibile dello stage

### Qualità
__Qualità:__ Rappresenta l'indice di qualità dell'aspetto grafico generale del software e dei contenuti in esso caricati.<br>
__Mouse:__ Mostra / nascondo il puntatore del mouse.<br>
__Punti di tocco:__ Mostra / nascondo il cursore del touch.<br>
__Colore punti di tocco:__ Indica il colore con cui viene visualizzato il cursore del touch.<br>
__DPI Documenti:__ Determina il fattore di qualità per la conversione automatica dei documenti PDF, DOC, DOCX.<br>
__Video simultanei:__ Determina il numero di video da riprodurre contemporaneamente sullo stage.

### Draw-on
__Colore matita pennello:__ Imposta il colore predefinito per la funzionalità draw-on.<br>
__Stile:__ Imposta lo stile predefinito per la funzionalità draw-on.<br>
__Dimensione tratto:__ Imposta la dimensione tratto predefinita per la funzionalità draw-on.<br>
__Includi disegni in stampa:__ Include i disegni nella stampa dei documenti.

### Impostazioni generali
__Apertura esterna dei file:__ Abilita l'opzione per l'apertura del contenuto con il programma predefinito di windows.<br>
__Full screen:__ Abilita l'opzione per l'apertura del contenuto a schermo intero.<br>
__Editazione:__ Abilita la funzionalità draw-on su tutti i contenuti.<br>
__Stampa:__ Abilita la funzionalità di stampa su tutti i contenuti.<br>
__Preferiti:__ Abilita la funzionalità aggiungi a preferiti su tutti i contenuti.<br>
__Invio email da preferiti:__ Abilita la possibilità di condividere contenuti tramite email:<br>
__Abilita ricerca:__ Viene abilitata la funzione di ricerca all'interno dell'archivio.<br>
__Abilita rotazione magnetica:__ Quando è abilitata i contenuti potranno essere ruotati a step di 90°.<br>
__Apertura multipla punti informativi:__ Quando è abilitata si potranno aprire più punti informativi alla volta.<br>
__Tema moduli:__ Personalizzazione grafica dei moduli "Preferiti", "Ricerca", etc [__Vai al Tema Moduli__](/it/2.17/media-manager/themes/theme-module.md)

## Impostazioni titolo
![](/img/4.0/Titles_options.jpg)
__Imposta titoli:__ in automatico il titolo di tutti gli elementi viene aggiornato con il nome del fil
__Reset titoli:__ in automatico il software elimina tutti i titoli degli elementi.


### Impostazioni mail
![](/img/3.1/setting_2.png)

- _Mittente predefinito:_ Indirizzo email predefinito per l'invio delle emal.<br>
- _Smtp Hosting:_ Specificare il protocollo SMTP per la condivisione di contenuti tramite email.<br>
- _Username:_ Specificare lo Username dell'account per la condivisione di contenuti tramite email.<br>
- _Password:_ Specificare la Password dell'account per la condivisione di contenuti tramite email.<br>
- _Port:_ Specificare la porta del protocollo SMTP per la condivisione di contenuti tramite email.<br>
- _Ssl:_ Specificare se l'account smtp richiede l'SSL attivo.

### Impostazioni screensaver
![](/img/3.1/setting_11.png)

__Tipo:__ Abilita lo screensaver per sequenze di immagini e video.<br>
__Attivazione:__ Valore in secondi che determina l'attivazione dello screensaver in caso di inattività dell'utente.<br>
__Tempo foto:__ Valore in secondi che determina la pausa delle foto in sequenza.<br>
__Video e/o immagini:__ Selezione dei file da importare nello screensaver.<br>
__Adattamento file:__ Determina la modalità di adattamento dei file rispetto allo stage:<br>
  - _Stira:_ Il file viene adattato alla risoluzione della finestra senza mantenere le proporzioni originarie [default]<br>
  - _Nessuno:_ il file non viene adattato ed è possibile scegliere in quale posizione deve comparire<br>
  - _Adatta Internamente:_ Il file viene adattato mantenendo le sue proprozioni all'interno della finestra<br>
  - _Adatta Esternamente:_ Il file viene adattato mantenendo le sue proprozioni coprendo tutta l'area visibile dello stage<br>
E' possibile inoltre alternare foto e video all'interno dello stesso screensaver.

### Interactive B.Y.O.D.
![](/img/4.0/BYOD_options.jpg)

__Interactive B.Y.O.D.:__ abilita la possibilità di fare lo streaming da un dispositivo, tramite i protocolli AirPlay, Google Cast e MiraCast direttamente nel Touchviewer senza uscire del software e con la possibilità di continuare a consultare gli elementi dell’archivio.<br>
__Abilita pin AirPlay:__ il software mostrerà a schermo un pin che l’utente dovrà inserire sul suo dispositivo prima di connettersi<br>
__Abilita pin GoogleCast:__ il software mostrerà a schermo un pin che l’utente dovrà inserire sul suo dispositivo prima di iniziare lo streaming utilizzando il protocollo GoogleCast<br>
__Abilita pin MiraCast:__ il software mostrerà a schermo un pin che l’utente dovrà inserire sul suo dispositivo prima di iniziare lo streaming utilizzando il protocollo MiraCast<br>
__Salva config:__ salva le configurazioni di sicurezza modificate<br>
__Richiedi conferma alla connessione nuovo dispositivo:__ il software mostrerà una finestra di autorizzazione alla connessione di un nuovo dispositivo<br>
__Abilita bordi dello schermo calamitati:__ se la finestra dello streaming viene trascinata vicino al bordo, il software la allineerà al bordo dello schermo più vicino<br>
__Disable Hw Acc:__ per alcune schede grafiche è necessario disattivare l’accelerazione hardware.<br>


### Impostazioni Snapshot
![](/img/4.0/snapshot_options.jpg)

__Abilita Snapshot:__ Abilita la funzionalità Snapshot per creare istantanee dei contenuti<br>
__Copia editazione e commenti:__ all'interno dello snapshot vengono copiati anche eventuali annotazioni e commenti<br>
__Elimina alla chiusura:__ lo snpashot viene eliminato alla chiusura<br>
__Includi annotazioni:__ le annotazioni sull’elemento vengono integrate nel file finale e saranno visualizzabili anche fuori dal software<br>
__Cartella destinazione:__ percorso in cui salvare gli snapshot creati, se lasciata vuota il software salverà gli elementi in una cartella interna all’archivio<br>


### Impostazioni Screenshot
![](/img/4.0/screenshot_options.jpg)

__Abilita Screenshot:__ Abilita la funzionalità Screenshot per creare istantanee dello spazio di lavoro<br>
__Elimina alla chiusura:__ lo screenshot viene eliminato automaticamente alla chiusura<br>
__Conferma prima di chiudere:__ verrà mostrata una finestra per chiedere conferma se eliminare la selezione<br>
__Abilita crop gesture:__ abilita la possibilità di selezionare tramite gesture la zona dello spazio di lavoro di cui fare lo screenshot<br>
__Cartella destinazione:__ percorso in cui salvare le selezioni create, se lasciata vuota il software salverà le selezioni in una cartella interna all’archivio<br>


### Impostazioni Zooming User Interface
![](/img/3.1/setting_4.png)

__Abilita Zomming User Interface:__ Abilita la funzionalità Zomming User Interface <br>
__Traslazione:__ Coordinate del punto iniziale in cui è posizionato il centro dello stage infinito<br>
__Scala:__ Scala iniziale dello stage infinito<br>
__Resetta:__ Reset ai valori di default della traslazione e scala<br>

### Impostazioni Floating Menù
![](/img/3.1/setting_5.png)

__Abilita Floating Menù:__ Abilita il floating Menù<br>
__Colore Background Menù:__ Imposta il colore del menù<br>
__Colore icona cartella:__ Imposta il colore di sfondo delle icone di tipi cartella<br>
__Carattere:__ Imposta lo stile del Font nei titoli dei file e cartelle<br>
__Modificare icona start:__ Abilita la modifica dell'icona start per aprire menù<br>
__Colore background icona start:__ Imposta il colore di sfondo dell'icona start per l'apertura del menà<br>
__Numero di Menù iniziali:__ Imposta il numero di menù iniziali che è possibile aprire<br>
__Rotazione Menù:__ Abilita la possibilità di aprire i menu<br>
__Abilita Circle Gesture:__ Abilita la gesture Circle per l'apertura dei floating menù<br>
__Colore Gesture:__ Imposta il colore della traccia della gesture circle<br>
__Orienta i nuovi Menù rispetto al bordo dello stage:__ I nuovi menù creati con la gesture circle vengono orientati al bordo dello stage<br>
__Apertura nuovi Menù con visualizzazione a Cartelle:__ Il nuovo menù viene creato già aperto<br>
__Numero massimo di nuovi Menù:__ Imposta il numero massimo di nuovi menù che si possono aprire<br>
__Elimina i nuovi Menù quando vengono chiusi:__ I nuovi menù creati una volta chiusi vengono eliminati dallo stage ed è necessario crearni di nuovi<br>

__<span class="text-lightblue">VISUALIZZAZIONE FILE HOME</span>__<br>
__nel Menù:__ I file presenti nella root dell'archivio vengono visualizzati all'interno del menu<br>
__nello stage:__ I file presenti nella root dell'archivio vengono visualizzati sullo stage<br>

### Impostazioni Menù Toolbox
![](/img/3.1/setting_6.png)

__Abilita Tollbox:__ Abilita la toolbox con gli strumenti utili alla navigazione<br>
__Sfondo bottone Toolbox:__ Imposta il colore di sfondo del del bottone per aprire la toolbox<br>
__Modificare icona Toolbox:__ Modifica l'icona del bottone per aprire la toolbox<br>
__Aprire Toolbox espansa:__ Di default la toolbox viene mostrata già aperta<br>
__Abilita Drag:__ La toolbox può essere spostata sullo stage<br>
__Reset al cambio cartella:__ Quando cambio cartella durante la navigazione la toolbox viene riposizionata nel punto iniziale<br>

__<span class="text-lightblue">ABILITA BOTTONI</span>__<br>
__Ricerca:__ Abilita il bottone per l'apertura della ricerca<br>
__Home:__  Abilita il bottone per tornare alla Home<br>
__External Content:__  Abilita il bottone per l'apertura dell'interfaccia per l'importazione dei contenuti esterni<br>
__Indietro:__  Abilita il bottone per tornare alla cartella precedente<br>
__Chiudi:__  Abilita il bottone per la chiusura del touchviewer<br>
__Blocca/Sblocca Zooming User Interface:__  Abilita il bottone per bloccare/sbloccare il trascinamento e zoom della Zooming user interface<br>
__Screenshot:__ viene creato uno screenshot dell’intero spazio di lavoro<br>
__Bottone crop:__ abilita disabilita la funzione di selezione tramite gesture della porzione di spazio di lavoro di cui fare lo screenshot<br>


### Impostazioni Contenuti Esterni
![](/img/3.1/setting_7.png)

__Abilita contenuti esterni:__ Abilita l'apertura di contenuti esterni<br>
__Apri finestra alla connessione di un disposito USB:__ Viene aperta l'interfaccia per l'importazione dei contenuti esterni, quando una chiavetta USB viene connessa al PC<br>
__Chiedi se salvare nuovo contenuto:__ Quando un contenuto esterno viene chiuso viene chesto se lo si vuole salvare<br>

### Impostazioni Preferiti
![](/img/3.1/setting_8.png)

__Abilita Preferiti Multiutente:__ Abilità la funzionalità Preferiti<br>
__Larghezza popup:__ Imposta la larghezza della finestra in cui vengono visualizzati i contenuti preferiti<br>
__Altezza popup:__ Imposta l'altezza della finestra in cui vengono visualizzati i contenuti preferiti<br>

### Impostazioni Web Browser
![](/img/3.1/setting_9.png)

__Abilita preferiti web browser:__ E' possibile abilitare o disabilitare la funzionalità preferiti nel browser<br>
__Permetti autenticazione automatica:__ Abilitare l'inserimento automatico delle credenziali per l'accesso in aree protette<br>
__Url:__ Inserire Manualmente gli URL e la label da visualizzare (eventualmente le relative credenziali di accesso)<br>
__Label:__ Nome che viene visualizzato al posto dell'url nella lista dei preferiti<br>
__Username:__ Username che viene inserito in automatico quando viene richiesto l'inserimento di credenziali per l'accesso al sito<br>
__Password:__ Password che viene inserita in automatico quando viene richiesto l'inserimento di credenziali per l'accesso al sito<br>
__Aggiungere ai preferiti:__ Abilitare o disabilitare un Bookmarks già inserito<br>
__Aggiungi:__ Aggiunge un nuovo preferito<br>
__Elimina:__ Salva un nuovo preferito<br>

### Impostazioni Networking
![](/img/3.1/setting_10.png)

__Nome/Indirizzo del Server:__ Nome/indirizzo ip del Server per utilizzare la Real-Time Collaboration<br>
__Clients:__ Lista dei clients aggiunti al network<br>
__Nome/Indirizzo:__  Nome/indirizzo ip dei clients che fanno parte del network della Real-time collaboration<br>
__Numero massimo contenuti:__ numero massimo di contenuti che si possono aprire contemporaneamente su un singolo clients<br>

__<span class="text-lightblue">STREAMING</span>__<br>
__Web Browser:__ Abilita lo stream di un contenuto di tipo web browser<br>
__Ingresso video:__ Abilita lo stream di un contenuto di tipo Ingresso video<br>
__Streaming Video:__ Abilita lo stream di un contenuto di tipo Streaming Video<br>
__Applicazione Esterna:__ Abilita lo stream di un contenuto di tipo Applicazione Esterna<br>

__Aggiungi:__ Aggiunge un nuovo client<br>
__Elimina:__ Elimina il client selezionato<br>